chore: list files (#33)
* chore: list files

* chore: fix lint
