# pkg/storage/handler/document_handler.go
@@ -21,7 +21,39 @@ func (h *Handler) UploadFile(ctx context.Context, req *storagepb.UploadFileReque
 		return nil, err
 	}
 	return &storagepb.UploadFileResponse{
-		FileId:   documentResponse.ID.String(),
-		FileName: documentResponse.FileName,
+		Document: &storagepb.Document{
+			Id:        documentResponse.ID.String(),
+			UserId:    documentResponse.UserID.String(),
+			FileName:  documentResponse.FileName,
+			FileSize:  documentResponse.FileSize,
+			ObjectKey: documentResponse.ObjectKey,
+			CreatedAt: documentResponse.CreateAt.Unix(),
+			UpdatedAt: documentResponse.UpdateAt.Unix(),
+		},
+	}, nil
+}
+
+func (h *Handler) ListFilesByUserId(ctx context.Context, req *storagepb.ListFilesByUserIdRequest) (*storagepb.ListFilesByUserIdResponse, error) {
+	userID := uuid.MustParse(req.UserId)
+	documents, err := h.documentManager.ListDocumentsByUserID(ctx, userID)
+	if err != nil {
+		return nil, err
+	}
+
+	pbDocuments := make([]*storagepb.Document, len(documents))
+	for i, doc := range documents {
+		pbDocuments[i] = &storagepb.Document{
+			Id:        doc.ID.String(),
+			UserId:    doc.UserID.String(),
+			FileName:  doc.FileName,
+			FileSize:  doc.FileSize,
+			ObjectKey: doc.ObjectKey,
+			CreatedAt: doc.CreateAt.Unix(),
+			UpdatedAt: doc.UpdateAt.Unix(),
+		}
+	}
+
+	return &storagepb.ListFilesByUserIdResponse{
+		Documents: pbDocuments,
 	}, nil
 }
